# cassava-model-comparison

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: cassava.yaml
configs/paths/: paths.yaml
scripts/: predict.py  test.py  train.py  visualize.py
src/cassava_model_comparison/: config.py
src/cassava_model_comparison/datasets/: __init__.py  cassava_dataset.py  dataloader.py  dataloaders.py  dataset.py  split.py  transforms.py
src/cassava_model_comparison/engine/: __init__.py  checkpoint.py  eval.py  save.py  train.py  trainer.py
src/cassava_model_comparison/engine/checkpoint/: load.py  save.py
src/cassava_model_comparison/engine/factories/: __init__.py
src/cassava_model_comparison/engine/loops/: __init__.py  evaluate_one_epoch.py  train_one_epoch.py
src/cassava_model_comparison/io/: image_utils.py
src/cassava_model_comparison/models/: __init__.py  build.py  mobilenet_v2.py  model_factory.py  resnet18.py  simple_cnn.py
src/cassava_model_comparison/utils/: image_utils.py
src/cassava_model_comparison/visualize/: plots.py
